--- a/lang/it.lang
+++ b/lang/it.lang
@@ -69,7 +69,7 @@ msgid "Audio"
 msgstr "Audio"
 
 msgid "Saves"
-msgstr "Salva"
+msgstr "Salvataggi"
 
 msgid "Select CPU Core"
 msgstr "Seleziona Core"
@@ -99,10 +99,10 @@ msgid "No"
 msgstr "No"
 
 msgid "On"
-msgstr "ON"
+msgstr "Si"
 
 msgid "Off"
-msgstr "OFF"
+msgstr "No"
 
 msgid "Show FPS"
 msgstr "Mostra FPS"
@@ -114,7 +114,7 @@ msgid "Frame Skip"
 msgstr "Salta Frame"
 
 msgid "Screen Mode"
-msgstr "Modalità schermo"
+msgstr "Rapporto schermo"
 
 msgid "Dithering"
 msgstr "Dithering"
@@ -126,7 +126,7 @@ msgid "Auto"
 msgstr "Auto"
 
 msgid "Force 16:9"
-msgstr "Forza 16:9"
+msgstr "16:9 Pillarbox"
 
 msgid "None"
 msgstr "Nessuno"
@@ -468,7 +468,7 @@ msgid "Load MemCards"
 msgstr "Carica MemCard"
 
 msgid "Save MemCards"
-msgstr "Galva MemCard"
+msgstr "Salva MemCard"
 
 msgid "Show ISO Info"
 msgstr "Info. ISO"
@@ -534,7 +534,7 @@ msgid "Error Saving State"
 msgstr "Errore salvataggio Stato"
 
 msgid "OK"
-msgstr "Bene"
+msgstr "Grazie"
 
 msgid "Cancel"
 msgstr "Annulla"
