Quickly load as an Option
Most games do not require this option to be enabled, May cause various problems.
For some slow loading games, such as Parasite Eve, LEGO Island 2, etc., increase the loading speed.

--- a/lang/Kr.lang
+++ b/lang/Kr.lang
@@ -566,5 +566,8 @@ msgstr "포르투갈어"
 msgid "Select language"
 msgstr "언어 선택"
 
+msgid "Fast Load"
+msgstr "빠른 로드"
+
 msgid "Because the language has changed, please restart"
 msgstr "언어가 변경되었으므로 다시 시작하세요."
