--- a/lang/it.lang
+++ b/lang/it.lang
@@ -569,5 +569,8 @@ msgstr "It"
 msgid "Select language"
 msgstr "Seleziona lingua"
 
+msgid "Fast Load"
+msgstr "Carico veloce"
+
 msgid "Because the language has changed, please restart"
 msgstr "Poiché la lingua è cambiata, riavviare"
