--- a/lang/pt.lang
+++ b/lang/pt.lang
@@ -566,5 +566,8 @@ msgstr "Pt"
 msgid "Select language"
 msgstr "Selecionar Idioma"
 
+msgid "Fast Load"
+msgstr "Carga Rápida"
+
 msgid "Because the language has changed, please restart"
 msgstr "Idioma alterado, por favor reinicie"
