--- a/lang/es.lang
+++ b/lang/es.lang
@@ -566,5 +566,8 @@ msgstr "Pt"
 msgid "Select language"
 msgstr "Elegir Idioma"
 
+msgid "Fast Load"
+msgstr "Carga rápida"
+
 msgid "Because the language has changed, please restart"
 msgstr "Idioma ha sido cambiado, por favor reinicia"
