--- a/lang/de.lang
+++ b/lang/de.lang
@@ -1,573 +1,572 @@
-
 msgid "Load ISO"
-msgstr "Cargar ISO"
+msgstr "ISO laden"
 
 msgid "Current ISO"
-msgstr "ISO Actual"
+msgstr "Aktuelle ISO"
 
 msgid "Settings"
-msgstr "Configuración"
+msgstr "Einstellungen"
 
 msgid "Credits"
-msgstr "Créditos"
+msgstr ""
 
 msgid "Quit"
-msgstr "Salir"
+msgstr "Beenden"
 
 msgid "Play Game"
-msgstr "Jugar Juego"
+msgstr "Spiel starten"
 
 msgid "Resume Game"
-msgstr "Reanudar Juego"
+msgstr "Spiel fortsetzen"
 
 msgid "Please load an ISO first"
-msgstr "Carga la ISO primero"
+msgstr "Bitte zuerst eine ISO laden"
 
 msgid "Are you sure you want to exit to loader?"
-msgstr "¿Seguro que quieres salir?"
+msgstr "Sind Sie sicher, dass Sie zum Loader zurückkehren möchten?"
 
 msgid "Automatically saved to SD card"
-msgstr "Guardado en memoria SD"
+msgstr "Automatisch auf SD-Karte gespeichert"
 
 msgid "Automatically saved to USB device"
-msgstr "Guardado en dispositivo USB"
+msgstr "Automatisch auf USB-Gerät gespeichert"
 
 msgid "Automatically saved to memcard in Slot A"
-msgstr "Guardado en Memory Card A"
+msgstr "Automatisch auf Memory Card in Slot A gespeichert"
 
 msgid "Automatically saved to memcard in Slot B"
-msgstr "Guardado en Memory Card B"
+msgstr "Automatisch auf Memory Card in Slot B gespeichert"
 
 msgid "Failed to save game"
-msgstr "Fallo Guardar juego"
+msgstr "Speichern des Spiels fehlgeschlagen"
 
 msgid "No ISO Loaded"
-msgstr "ISO no cargada"
+msgstr "Keine ISO geladen"
 
 msgid "AutoSave Enabled"
-msgstr "AutoGuardado Act."
+msgstr "Automatisches Speichern aktiviert"
 
 msgid "Nothing to Save"
-msgstr "Nada que Guardar"
+msgstr "Nichts zu speichern"
 
 msgid "Game Needs Saving"
-msgstr "Necesita Guardar"
+msgstr "Spiel muss gespeichert werden"
 
 msgid "General"
-msgstr "General"
+msgstr "Allgemein"
 
 msgid "Video"
-msgstr "Video"
+msgstr ""
 
 msgid "Input"
-msgstr "Control"
+msgstr "Eingabe"
 
 msgid "Audio"
-msgstr "Audio"
+msgstr ""
 
 msgid "Saves"
-msgstr "Salvado"
+msgstr "Spielstände"
 
 msgid "Select CPU Core"
-msgstr "Selecciona Núcleo"
+msgstr "CPU-Kern auswählen"
 
 msgid "Select Bios"
-msgstr "Selecciona Bios"
+msgstr "Bios auswählen"
 
 msgid "Boot Through Bios"
-msgstr "Arrancar con Bios"
+msgstr "Durch das Bios starten"
 
 msgid "Execute Bios"
-msgstr "Correr Bios"
+msgstr "Bios ausführen"
 
 msgid "Save settings"
-msgstr "Guardar ajustes"
+msgstr "Einstellungen speichern"
 
 msgid "Interpreter"
-msgstr "Interpreter"
+msgstr ""
 
 msgid "Dynarec"
-msgstr "Dynarec"
+msgstr ""
 
 msgid "Yes"
-msgstr "Sí"
+msgstr "Ja"
 
 msgid "No"
-msgstr "No"
+msgstr "Nein"
 
 msgid "On"
-msgstr "Sí"
+msgstr "An"
 
 msgid "Off"
-msgstr "No"
+msgstr "Aus"
 
 msgid "Show FPS"
-msgstr "Mostrar FPS"
+msgstr "FPS anzeigen"
 
 msgid "Limit FPS"
-msgstr "Limitar FPS"
+msgstr "FPS begrenzen"
 
 msgid "Frame Skip"
-msgstr "Saltar Cuadros"
+msgstr "Bildüberspringung"
 
 msgid "Screen Mode"
-msgstr "Modo Pantalla"
+msgstr "Bildschirmmodus"
 
 msgid "Dithering"
-msgstr "Difuminado"
+msgstr ""
 
 msgid "Scaling"
-msgstr "Escalar"
+msgstr "Skalierung"
 
 msgid "Auto"
 msgstr "Auto"
 
 msgid "Force 16:9"
-msgstr "Forzar 16:9"
+msgstr "16:9 erzwingen"
 
 msgid "None"
-msgstr "Nada"
+msgstr "Keine"
 
 msgid "NoneNone"
-msgstr "Nada"
+msgstr "KeineKeine"
 
 msgid "2xSaI"
 msgstr "2xSaI"
 
 msgid "Default"
-msgstr "Defecto"
+msgstr "Standard"
 
 msgid "Always"
-msgstr "Siempre"
+msgstr "Immer"
 
 msgid "Configure Input"
-msgstr "Config. Control"
+msgstr "Eingabe konfigurieren"
 
 msgid "Configure Buttons"
-msgstr "Config. Botones"
+msgstr "Tasten konfigurieren"
 
 msgid "PSX Controller Type"
-msgstr "Control Tipo PSX"
+msgstr "PSX-Controller-Typ"
 
 msgid "Disable Rumble"
-msgstr "Sin Vibración"
+msgstr "Rumble deaktivieren"
 
 msgid "Standard"
-msgstr "Estándar"
+msgstr "Standard"
 
 msgid "Analog"
-msgstr "Análogo"
+msgstr "Analog"
 
 msgid "Save Button Configs"
-msgstr "Guardar Config."
+msgstr "Tastenbelegung speichern"
 
 msgid "Auto Load Slot:"
-msgstr "Auto Cargar"
+msgstr "Automatisches Laden Slot:"
 
 msgid "Disable Audio"
-msgstr "Deshabilitar Audio"
+msgstr "Audio deaktivieren"
 
 msgid "Disable XA"
-msgstr "Deshabilitar XA"
+msgstr "XA deaktivieren"
 
 msgid "Disable CDDA"
-msgstr "Deshabilitar CDDA"
+msgstr "CDDA deaktivieren"
 
 msgid "Volume"
-msgstr "Volumen"
+msgstr "Lautstärke"
 
 msgid "loudest"
-msgstr "Alto+"
+msgstr "lauteste"
 
 msgid "loud"
-msgstr "Alto"
+msgstr "laut"
 
 msgid "medium"
-msgstr "Medio"
+msgstr "mittel"
 
 msgid "low"
-msgstr "Bajo"
+msgstr "leise"
 
 msgid "Memcard Save Device"
-msgstr "Ruta de MemoryCard"
+msgstr ""
 
 msgid "Auto Save Memcards"
-msgstr "Autoguardar MemCards"
+msgstr "Speicherkarten automatisch speichern"
 
 msgid "Save States Device"
-msgstr "Ruta de Estados"
+msgstr ""
 
 msgid "CardA"
-msgstr "CardA"
+msgstr "KarteA"
 
 msgid "CardB"
-msgstr "CardB"
+msgstr "KarteB"
 
 msgid "Game Reset"
-msgstr "Resetear"
+msgstr "Spiel zurücksetzen"
 
 msgid "BIOS not found on SD"
-msgstr "BIOS no está en SD"
+msgstr "BIOS auf SD nicht gefunden"
 
 msgid "BIOS not found on USB"
-msgstr "BIOS no está en USB"
+msgstr "BIOS auf USB nicht gefunden"
 
 msgid "DVD BIOS not implemented"
-msgstr "BIOS DVD no implementado"
+msgstr "DVD-BIOS nicht implementiert"
 
 msgid "You must select a BIOS, not HLE"
-msgstr "Selecciona un BIOS, No HLE"
+msgstr "Sie müssen ein BIOS auswählen, kein HLE"
 
 msgid "Failed to initialize system.\nTry loading an ISO."
-msgstr "Fallo arranque de sistema.\Carga una ISO"
+msgstr "Systeminitialisierung fehlgeschlagen.\nVersuchen Sie, eine ISO zu laden."
 
 msgid "Error opening directory sd:/wiisxr"
-msgstr "Error abriendo carpeta sd:/wiisxr"
+msgstr "Fehler beim Öffnen des Verzeichnisses sd:/wiisxr"
 
 msgid "Saved settings to SD"
-msgstr "Ajustes guardados en SD"
+msgstr "Einstellungen auf SD-Karte gespeichert"
 
 msgid "Error saving settings to SD"
-msgstr "Error guardando ajustes en SD"
+msgstr "Fehler beim Speichern der Einstellungen auf SD"
 
 msgid "Error opening directory usb:/wiisxr"
-msgstr "Error abriendo carpeta usb:/wiisxr"
+msgstr "Fehler beim Öffnen des Verzeichnisses usb:/wiisxr"
 
 msgid "Saved settings to USB"
-msgstr "Ajustes guardados en USB"
+msgstr "Einstellungen auf USB-Gerät gespeichert"
 
 msgid "Error saving settings to USB"
-msgstr "Error guardando ajustes en USB"
+msgstr "Fehler beim Speichern der Einstellungen auf USB"
 
 msgid "Saved Button Configs to SD"
-msgstr "Mapeo Guardado en SD"
+msgstr "Tastenbelegung auf SD gespeichert"
 
 msgid "Error saving Button Configs to SD"
-msgstr "Error guardando Mapeo en SD"
+msgstr "Fehler beim Speichern der Tastenbelegung auf SD"
 
 msgid "Saved Button Configs to USB"
-msgstr "Mapeo Guardado en USB"
+msgstr "Tastenbelegung auf USB gespeichert"
 
 msgid "Error saving Button Configs to USB"
-msgstr "Error guardando configuración de botones en USB"
+msgstr "Fehler beim Speichern der Tastenbelegung auf USB"
 
 msgid "CDDA audio is not implemented"
-msgstr "Audio CDDA no implementado"
+msgstr "CDDA-Audio ist nicht implementiert"
 
 msgid "Slot 0"
-msgstr "Slot 0"
+msgstr ""
 
 msgid "Slot 1"
-msgstr "Slot 1"
+msgstr ""
 
 msgid "Slot 2"
-msgstr "Slot 2"
+msgstr ""
 
 msgid "Slot 3"
-msgstr "Slot 3"
+msgstr ""
 
 msgid "Slot 4"
-msgstr "Slot 4"
+msgstr ""
 
 msgid "Slot 5"
-msgstr "Slot 5"
+msgstr ""
 
 msgid "Slot 6"
-msgstr "Slot 6"
+msgstr ""
 
 msgid "Slot 7"
-msgstr "Slot 7"
+msgstr ""
 
 msgid "Slot 8"
-msgstr "Slot 8"
+msgstr ""
 
 msgid "Slot 9"
-msgstr "Slot 9"
+msgstr ""
 
 msgid "Pad Assignment"
-msgstr "Asignar Mando"
+msgstr "Tastenbelegung"
 
 msgid "PSX Pad 1"
-msgstr "Mando PSX 1"
+msgstr "PSX-Pad 1"
 
 msgid "PSX Pad 2"
-msgstr "Mando PSX 2"
+msgstr "PSX-Pad 2"
 
 msgid "PSX Pad 3"
-msgstr "Mando PSX 3"
+msgstr "PSX-Pad 3"
 
 msgid "PSX Pad 4"
-msgstr "Mando PSX 4"
+msgstr "PSX-Pad 4"
 
 msgid "Automatic"
-msgstr "Automático"
+msgstr "Automatisch"
 
 msgid "Manual"
-msgstr "Manual"
+msgstr "Manuell"
 
 msgid "None"
-msgstr "Nada"
+msgstr "Keine"
 
 msgid "Gamecube Pad"
-msgstr "M. Gamecube"
+msgstr "Gamecube-Pad"
 
 msgid "Wii Pad"
-msgstr "Mando de Wii"
+msgstr "Wii-Pad"
 
 msgid "Auto Assign"
-msgstr "Auto Asignar"
+msgstr "Automatische Zuweisung"
 
 msgid "Next Pad"
-msgstr "S. Mando"
+msgstr "Nächstes Pad"
 
 msgid "Load Default"
-msgstr "Defecto"
+msgstr "Standard laden"
 
 msgid "Load"
-msgstr "Load"
+msgstr "Laden"
 
 msgid "Save"
-msgstr "Save"
+msgstr "Speichern"
 
 msgid "PSX Pad 1: No Physical Controller Assigned"
-msgstr "Mando de PSX 1: Control Físico No Asignado"
+msgstr "PSX-Pad 1: Kein physischer Controller zugewiesen"
 
 msgid "PSX Pad 2: No Physical Controller Assigned"
-msgstr "Mando de PSX 2: Control Físico No Asignado"
+msgstr "PSX-Pad 2: Kein physischer Controller zugewiesen"
 
 msgid "PSX Pad 3: No Physical Controller Assigned"
-msgstr "Mando de PSX 3: Control Físico No Asignado"
+msgstr "PSX-Pad 3: Kein physischer Controller zugewiesen"
 
 msgid "PSX Pad 4: No Physical Controller Assigned"
-msgstr "Mando de PSX 4: Control Físico No Asignado"
+msgstr "PSX-Pad 4: Kein physischer Controller zugewiesen"
 
 msgid "Gamecube Pad 1 to PSX Pad 1 Mapping"
-msgstr "Mapeo de Mando de Gamecube 1 a PSX 1"
+msgstr "Gamecube-Pad 1 auf PSX-Pad 1 Tastenbelegung"
 
 msgid "Gamecube Pad 2 to PSX Pad 2 Mapping"
-msgstr "Mapeo de Mando de Gamecube 2 a PSX 2"
+msgstr "Gamecube-Pad 2 auf PSX-Pad 2 Tastenbelegung"
 
 msgid "Gamecube Pad 3 to PSX Pad 3 Mapping"
-msgstr "Mapeo de Mando de Gamecube 3 a PSX 3"
+msgstr "Gamecube-Pad 3 auf PSX-Pad 3 Tastenbelegung"
 
 msgid "Gamecube Pad 4 to PSX Pad 4 Mapping"
-msgstr "Mapeo de Mando de Gamecube 4 a PSX 4"
+msgstr "Gamecube-Pad 4 auf PSX-Pad 4 Tastenbelegung"
 
 msgid "PSX Pad 1: Gamecube Pad 1 Mapping"
-msgstr "Mando PSX 1: Mapeo de C.Gamecube 1"
+msgstr "PSX-Pad 1: Gamecube-Pad 1 Tastenbelegung"
 
 msgid "PSX Pad 2: Gamecube Pad 2 Mapping"
-msgstr "Mando PSX 2: Mapeo de C.Gamecube 2"
+msgstr "PSX-Pad 2: Gamecube-Pad 2 Tastenbelegung"
 
 msgid "PSX Pad 1: Gamecube Pad 2 Mapping"
-msgstr "Mando PSX 1: Mapeo de C.Gamecube 2"
+msgstr "PSX-Pad 1: Gamecube-Pad 2 Tastenbelegung"
 
 msgid "PSX Pad 2: Gamecube Pad 1 Mapping"
-msgstr "Mando PSX 2: Mapeo de C.Gamecube 1"
+msgstr "PSX-Pad 2: Gamecube-Pad 1 Tastenbelegung"
 
 msgid "PSX Pad 1: Classic Pad 1 Mapping"
-msgstr "Mando PSX 1: Mapeo de C.Clasico 1"
+msgstr "PSX-Pad 1: Classic-Pad 1 Tastenbelegung"
 
 msgid "PSX Pad 2: Classic Pad 2 Mapping"
-msgstr "Mando PSX 2: Mapeo de C.Clasico 2"
+msgstr "PSX-Pad 2: Classic-Pad 2 Tastenbelegung"
 
 msgid "PSX Pad 1: Classic Pad 2 Mapping"
-msgstr "Mando PSX 1: Mapeo de C.Clasico 2"
+msgstr "PSX-Pad 1: Classic-Pad 2 Tastenbelegung"
 
 msgid "PSX Pad 2: Classic Pad 1 Mapping"
-msgstr "Mando PSX 2: Mapeo de C.Clasico 1"
+msgstr "PSX-Pad 2: Classic-Pad 1 Tastenbelegung"
 
 msgid "PSX Pad 1: Wiimote+Nunchuck Pad 1 Mapping"
-msgstr "Mando PSX 1: Mapeo de Wiimote+Nunchuck 1"
+msgstr "PSX-Pad 1: Wiimote+Nunchuck-Pad 1 Tastenbelegung"
 
 msgid "PSX Pad 2: Wiimote+Nunchuck Pad 2 Mapping"
-msgstr "Mando PSX 2: Mapeo de Wiimote+Nunchuck 2"
+msgstr "PSX-Pad 2: Wiimote+Nunchuck-Pad 2 Tastenbelegung"
 
 msgid "PSX Pad 1: Wiimote+Nunchuck Pad 2 Mapping"
-msgstr "Mando PSX 1: Mapeo de Wiimote+Nunchuck 2"
+msgstr "PSX-Pad 1: Wiimote+Nunchuck-Pad 2 Tastenbelegung"
 
 msgid "PSX Pad 2: Wiimote+Nunchuck Pad 1 Mapping"
-msgstr "Mando PSX 2: Mapeo de Wiimote+Nunchuck 1"
+msgstr "PSX-Pad 2: Wiimote+Nunchuck-Pad 1 Tastenbelegung"
 
 msgid "PSX Pad 1: Wiimote Pad 1 Mapping"
-msgstr "Mando PSX 1: Mapeo de Wiimote 1"
+msgstr "PSX-Pad 1: Wiimote-Pad 1 Tastenbelegung"
 
 msgid "PSX Pad 2: Wiimote Pad 2 Mapping"
-msgstr "Mando PSX 2: Mapeo de Wiimote 2"
+msgstr "PSX-Pad 2: Wiimote-Pad 2 Tastenbelegung"
 
 msgid "PSX Pad 1: Wiimote Pad 2 Mapping"
-msgstr "Mando PSX 1: Mapeo de Wiimote+Nunchuck 2"
+msgstr "PSX-Pad 1: Wiimote-Pad 2 Tastenbelegung"
 
 msgid "PSX Pad 2: Wiimote Pad 1 Mapping"
-msgstr "Mando PSX 2: Mapeo de Wiimote+Nunchuck 1"
+msgstr "PSX-Pad 2: Wiimote-Pad 1 Tastenbelegung"
 
 msgid "PSX Pad 1: Wii U Pro Pad 1 Mapping"
-msgstr "Mando PSX 1: Mapeo de C.Wii U Pro 1"
+msgstr "PSX-Pad 1: Wii U Pro-Pad 1 Tastenbelegung"
 
 msgid "PSX Pad 2: Wii U Pro Pad 2 Mapping"
-msgstr "Mando PSX 2: Mapeo de C.Wii U Pro 2"
+msgstr "PSX-Pad 2: Wii U Pro-Pad 2 Tastenbelegung"
 
 msgid "PSX Pad 1: Wii U Pro Pad 2 Mapping"
-msgstr "Mando PSX 1: Mapeo de C.Wii U Pro 2"
+msgstr "PSX-Pad 1: Wii U Pro-Pad 2 Tastenbelegung"
 
 msgid "PSX Pad 2: Wii U Pro Pad 1 Mapping"
-msgstr "Mando PSX 2: Mapeo de C.Wii U Pro 1"
+msgstr "PSX-Pad 2: Wii U Pro-Pad 1 Tastenbelegung"
 
 msgid "Saved current button mapping to slot 1."
-msgstr "Guardado mapeo de botones en ranura 1"
+msgstr "Aktuelle Tastenbelegung in Slot 1 gespeichert."
 
 msgid "Saved current button mapping to slot 2."
-msgstr "Guardado mapeo de botones en ranura 2"
+msgstr "Aktuelle Tastenbelegung in Slot 2 gespeichert."
 
 msgid "Load from SD"
-msgstr "Cargar desde SD"
+msgstr "Von SD laden"
 
 msgid "Load from DVD"
-msgstr "Cargar desde DVD"
+msgstr "Von DVD laden"
 
 msgid "Load from USB"
-msgstr "Cargar desde USB"
+msgstr "Von USB laden"
 
 msgid "Load from Samba"
-msgstr "Cargar desde Samba"
+msgstr "Von Samba laden"
 
 msgid "Available only for Wii"
-msgstr "Disponible solo para Wii"
+msgstr "Nur für Wii verfügbar"
 
 msgid "Network not yet initialized"
-msgstr "Sin Red Iniciada"
+msgstr "Netzwerk noch nicht initialisiert"
 
 msgid "SMB not configured"
-msgstr "SMB no configurado"
+msgstr "SMB nicht konfiguriert"
 
 msgid "SMB failed to connect"
-msgstr "Fallo conectar SMB"
+msgstr "SMB-Verbindung fehlgeschlagen"
 
 msgid "An error occured"
-msgstr "Ocurrió un error"
+msgstr "Ein Fehler ist aufgetreten"
 
 msgid "Failed to load ISO"
-msgstr "Fallo cargar ISO"
+msgstr "ISO konnte nicht geladen werden"
 
 msgid "Error opening directory"
-msgstr "Error abriendo carpeta"
+msgstr "Fehler beim Öffnen des Verzeichnisses"
 
 msgid "Game restarted"
-msgstr "Juego reiniciado"
+msgstr "Spiel neugestartet"
 
 msgid "Restart Game"
-msgstr "Reiniciar Juego"
+msgstr "Spiel neustarten"
 
 msgid "Swap CD"
-msgstr "Cambiar CD"
+msgstr "CD wechseln"
 
 msgid "Load MemCards"
-msgstr "Cargar Mem."
+msgstr "Speicherkarten laden"
 
 msgid "Save MemCards"
-msgstr "Guardar Mem."
+msgstr "Speicherkarten speichern"
 
 msgid "Show ISO Info"
-msgstr "Ver Info. ISO"
+msgstr "ISO-Information anzeigen"
 
 msgid "Load State"
-msgstr "Cargar Estado"
+msgstr "Spielstand laden"
 
 msgid "Save State"
-msgstr "Guardar Estado"
+msgstr "Spielstand speichern"
 
 msgid "Loaded save from SD card"
-msgstr "Guardado cargado desde SD"
+msgstr "Spielstand von SD-Karte geladen"
 
 msgid "No saves found on SD card"
-msgstr "No hay guardado en SD"
+msgstr "Keine Spielstände auf SD-Karte gefunden"
 
 msgid "Loaded save from USB device"
-msgstr "Guardado cargado desde USB"
+msgstr "Spielstand von USB-Gerät geladen"
 
 msgid "No saves found on USB device"
-msgstr "No hay guardado en USB"
+msgstr "Keine Spielstände auf USB-Gerät gefunden"
 
 msgid "Loaded save from memcard in slot A"
-msgstr "Guardado cargado desde MemoryCard A"
+msgstr "Spielstand von Memory Card in Slot A geladen"
 
 msgid "No saves found on memcard in slot A"
-msgstr "No hay guardado en MemoryCard A"
+msgstr "Keine Spielstände auf Memory Card in Slot A gefunden"
 
 msgid "Loaded save from memcard in slot B"
-msgstr "Guardado cargado desde MemoryCard B"
+msgstr "Spielstand von Memory Card in Slot B geladen"
 
 msgid "No saves found on memcard in slot B"
-msgstr "No hay guardado en MemoryCard B"
+msgstr "Keine Spielstände auf Memory Card in Slot B gefunden"
 
 msgid "Nothing to save"
-msgstr "Nada que Guardar"
+msgstr "Nichts zu speichern"
 
 msgid "Saved game to SD card"
-msgstr "Juego guardado en SD"
+msgstr "Spiel auf SD-Karte gespeichert"
 
 msgid "Saved game to USB device"
-msgstr "Juego guardado en USB"
+msgstr "Spiel auf USB-Gerät gespeichert"
 
 msgid "Saved game to memcard in Slot A"
-msgstr "Juego guardado en MemoryCard A"
+msgstr "Spiel auf Memory Card in Slot A gespeichert"
 
 msgid "Saved game to memcard in Slot B"
-msgstr "Juego guardado en MemoryCard B"
+msgstr "Spiel auf Memory Card in Slot B gespeichert"
 
 msgid "Failed to Save"
-msgstr "Fallo Guardar"
+msgstr "Speichern fehlgeschlagen"
 
 msgid "Save State Loaded Successfully"
-msgstr "Estado Cargado con Exito"
+msgstr "Spielstand erfolgreich geladen"
 
 msgid "Save doesn't exist"
-msgstr "No Existe Guardado"
+msgstr "Spielstand existiert nicht"
 
 msgid "Save State Saved Successfully"
-msgstr "Estado Guardado con Exito"
+msgstr "Spielstand erfolgreich gespeichert"
 
 msgid "Error Saving State"
-msgstr "Error Guardando Estado"
+msgstr "Fehler beim Speichern des Zustands"
 
 msgid "OK"
-msgstr "Bien"
+msgstr ""
 
 msgid "Cancel"
-msgstr "Cancelar"
+msgstr "Abbrechen"
 
 msgid "Prev"
-msgstr "Ante."
+msgstr "Vorherige"
 
 msgid "Next"
-msgstr "Sig."
+msgstr "Nächste"
 
 msgid "En"
-msgstr "En"
+msgstr ""
 
 msgid "Chs"
-msgstr "Chs"
+msgstr ""
 
 msgid "Cht"
-msgstr "Cht"
+msgstr ""
 
 msgid "Jp"
-msgstr "Jp"
+msgstr ""
 
 msgid "Kr"
-msgstr "Kr"
+msgstr ""
 
 msgid "Es"
-msgstr "Es"
+msgstr ""
 
 msgid "Pte"
-msgstr "Pt"
+msgstr ""
 
 msgid "Select language"
-msgstr "Elegir Idioma"
+msgstr "Sprache auswählen"
 
 msgid "Fast Load"
-msgstr "Carga rápida"
+msgstr "Schnelles Laden"
 
 msgid "Because the language has changed, please restart"
-msgstr "Idioma ha sido cambiado, por favor reinicia"
+msgstr "Da die Sprache geändert wurde, bitte neu starten"
