--- a/lang/zh.lang
+++ b/lang/zh.lang
@@ -574,3 +574,6 @@ msgstr "快速加载"
 
 msgid "Because the language has changed, please restart"
 msgstr "因为语言变更了，请重新启动"
+
+msgid "Separately"
+msgstr "单独保存"
