Adding Gaussian interpolation to SPU
This function can be enabled as an option in the SPU settings

--- a/lang/de.lang
+++ b/lang/de.lang
@@ -570,3 +570,7 @@ msgstr "FastLoad"
 
 msgid "Because the language has changed, please restart"
 msgstr "Da die Sprache geändert wurde, bitte neu starten"
+
+msgid "Simple"
+msgstr "Einfach"
+
