--- a/lang/es.lang
+++ b/lang/es.lang
@@ -571,3 +571,6 @@ msgstr "Carga rápida"
 
 msgid "Because the language has changed, please restart"
 msgstr "Idioma ha sido cambiado, por favor reinicia"
+
+msgid "Interpolation"
+msgstr "Interpolación"
