--- a/lang/it.lang
+++ b/lang/it.lang
@@ -574,3 +574,9 @@ msgstr "Carico veloce"
 
 msgid "Because the language has changed, please restart"
 msgstr "Poiché la lingua è cambiata, riavviare"
+
+msgid "Interpolation"
+msgstr "Interpolazione"
+
+msgid "Simple"
+msgstr "Semplice"
