--- a/lang/pt.lang
+++ b/lang/pt.lang
@@ -571,3 +571,6 @@ msgstr "Carga Rápida"
 
 msgid "Because the language has changed, please restart"
 msgstr "Idioma alterado, por favor reinicie"
+
+msgid "Interpolation"
+msgstr "Interpolação"
