--- a/lang/kr.lang
+++ b/lang/kr.lang
@@ -597,7 +597,7 @@ msgid "Pte"
 msgstr "포르투갈어"
 
 msgid "It"
-msgstr "이탈리아어"	 
+msgstr "이탈리아어"
 
 msgid "Select language"
 msgstr "언어 선택"
@@ -613,3 +613,12 @@ msgstr "별도 저장"
 
 msgid "Unable to read different versions of Save State"
 msgstr "다른 버전의 저장 상태를 읽을 수 없습니다."
+
+msgid "Interpolation"
+msgstr "인터폴레이션"
+
+msgid "Simple"
+msgstr "심플"
+
+msgid "Gaussi"
+msgstr "가우시안"
